--- a/webstudy99-board/.settings/org.eclipse.wst.common.component
+++ b/webstudy99-board/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                     
+                                                         
+    
     
     
     
@@ -13,7 +14,8 @@
     
     
     <wb-module deploy-name="webstudy99-board">
-                                                                                                                
+                                                                                                                        
+        
         
         
         
@@ -27,7 +29,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                                                
+                                                                                                                        
+        
         
         
         
@@ -41,7 +44,9 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                                                
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+                                                                                                                        
+        
         
         
         
@@ -55,8 +60,10 @@
         
         
         <property name="java-output-path" value="/webstudy99-board/build/classes"/>
+                
         <property name="context-root" value="webstudy99-board"/>
-                                                                                                            
+                                                                                                                    
+    
     
     
     
@@ -70,7 +77,8 @@
     
     
     </wb-module>
-                                                    
+                                                        
+
 
 
 
